# PYTK

./: .env.example  .gitignore  _test.ipynb  _venv.bat  pyproject.toml  readme.md
_test/: docx.docx  txt.txt  xlsx.xlsx
pytk/: __init__.py  pytk.py
