[project]
name = "pytk"
version = "1.0.0"
description = "Python Toolkit by One Level Studio"
authors = [{ name = "One Level Studio" }]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "requests",
    "rapidfuzz",
    "openai",
    "pymupdf",
    "openpyxl",
    "python-docx",
    "python-dotenv",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"